<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/grayBG_height"
        android:background="@color/colorBlue"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/day"
        android:text="@string/day"
        android:textSize="@dimen/textSize_date"
        style="@style/textView_dateStyle"
        android:layout_marginTop="@dimen/vertical_big_margin"
        android:layout_marginStart="@dimen/vertical_big_margin"
        android:padding="@dimen/vertical_small_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/month"
            android:text="@string/text_month"
            style="@style/textView_dateStyle"
            app:layout_constraintTop_toTopOf="@id/day"
            app:layout_constraintLeft_toRightOf="@id/day"/>
        <TextView
            android:id="@+id/year"
            android:text="@string/text_year"
            style="@style/textView_dateStyle"
            app:layout_constraintBottom_toBottomOf="@id/day"
            app:layout_constraintLeft_toRightOf="@id/day"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ic_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ic_place_left_dimens"
        android:layout_marginTop="@dimen/vertical_small_margin"
        android:onClick="openMap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gray_bg"
        app:srcCompat="@drawable/ic_place" />

    <TextView
        android:id="@+id/text_place"
        style="@style/textView_normalStyle"
        android:layout_marginStart="@dimen/text_place_margin"
        android:text="@string/default_place_text"
        app:layout_constraintLeft_toRightOf="@+id/ic_place"
        app:layout_constraintTop_toTopOf="@id/ic_place" />

    <ImageView
        android:id="@+id/ic_weather"
        android:layout_width="@dimen/img_width"
        android:layout_height="@dimen/img_height"
        android:layout_marginTop="@dimen/vertical_small_margin"
        android:src="@drawable/ic_cloudy_rain"
        app:layout_constraintLeft_toLeftOf="@id/ic_place"
        app:layout_constraintTop_toBottomOf="@id/ic_place" />

    <TextView
        android:id="@+id/text_now"
        style="@style/textView_smallStyle"
        android:layout_marginTop="@dimen/vertical_middle_margin"
        android:text="@string/text_now"
        app:layout_constraintLeft_toLeftOf="@id/ic_weather"
        app:layout_constraintTop_toBottomOf="@id/ic_weather" />

    <TextView
        android:id="@+id/text_today"
        style="@style/textView_smallStyle"
        android:layout_marginStart="@dimen/horizontal_big_margin"
        android:text="@string/text_today"
        app:layout_constraintLeft_toRightOf="@id/text_now"
        app:layout_constraintTop_toTopOf="@id/text_now" />

    <TextView
        android:id="@+id/temp"
        style="@style/textView_BigStyle"
        android:layout_marginTop="@dimen/vertical_middle_margin"
        android:text="@string/text_def_temp"
        app:layout_constraintLeft_toLeftOf="@id/text_now"
        app:layout_constraintTop_toBottomOf="@id/text_now" />

    <TextView
        android:id="@+id/temp_max"
        style="@style/textView_BigStyle"
        android:layout_marginTop="@dimen/vertical_middle_margin"
        android:text="@string/text_def_maxTemp"
        app:layout_constraintLeft_toLeftOf="@id/text_today"
        app:layout_constraintTop_toBottomOf="@id/text_today" />

    <TextView
        android:id="@+id/temp_min"
        style="@style/textView_BigStyle"
        android:layout_marginTop="@dimen/vertical_middle_margin"
        android:text="@string/text_def_minTemp"
        app:layout_constraintLeft_toRightOf="@id/temp_max"
        app:layout_constraintTop_toBottomOf="@id/text_today"
        android:layout_marginStart="@dimen/vertical_middle_margin"/>
    <TextView
        android:id="@+id/text_weather_condition"
        style="@style/textView_smallStyle"
        android:text="@string/little_rain"
        app:layout_constraintLeft_toLeftOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_weather_condition"/>
    <TextView
        style="@style/textView_smallStyle"
        android:text="@string/max"
        app:layout_constraintLeft_toLeftOf="@id/temp_max"
        app:layout_constraintTop_toBottomOf="@id/temp_max"/>
    <TextView
        style="@style/textView_smallStyle"
        android:text="@string/min"
        app:layout_constraintLeft_toLeftOf="@id/temp_min"
        app:layout_constraintTop_toBottomOf="@id/temp_min"/>
    <TextView
        android:id="@+id/wind"
        style="@style/textView_normalStyle"
        android:text="@string/wind"
        app:layout_constraintLeft_toLeftOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:layout_marginTop="@dimen/vertical_big_margin"/>
    <TextView
        android:id="@+id/Pressure"
        style="@style/textView_normalStyle"
        android:text="@string/pressure"
        app:layout_constraintLeft_toRightOf="@id/temp_min"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:layout_marginTop="@dimen/vertical_big_margin"/>
    <TextView
        android:id="@+id/text_wind_condition"
        style="@style/textView_BigStyle"
        android:text="@string/text_wind_condition"
        android:layout_marginTop="@dimen/vertical_small_margin"
        app:layout_constraintTop_toBottomOf="@id/wind"
        app:layout_constraintLeft_toLeftOf="@id/wind"/>
    <TextView
        android:id="@+id/text_pressure_condition"
        style="@style/textView_BigStyle"
        android:text="@string/text_pressure_condition"
        android:layout_marginTop="@dimen/vertical_small_margin"
        app:layout_constraintTop_toBottomOf="@id/Pressure"
        app:layout_constraintLeft_toLeftOf="@id/Pressure"/>
    <TextView
        android:id="@+id/humidity"
        style="@style/textView_normalStyle"
        android:text="@string/humidity"
        app:layout_constraintTop_toBottomOf="@+id/text_wind_condition"
        app:layout_constraintLeft_toLeftOf="@id/text_wind_condition"
        android:layout_marginTop="@dimen/vertical_small_margin"/>

    <TextView
        android:id="@+id/Cloudiness"
        style="@style/textView_normalStyle"
        android:text="@string/cloudiness"
        app:layout_constraintTop_toBottomOf="@+id/text_pressure_condition"
        app:layout_constraintLeft_toLeftOf="@id/text_pressure_condition"
        android:layout_marginTop="@dimen/vertical_small_margin"/>
    <TextView
        android:id="@+id/text_humidity_condition"
        style="@style/textView_BigStyle"
        android:text="@string/text_humidity_condition"
        android:layout_marginTop="@dimen/vertical_small_margin"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        app:layout_constraintLeft_toLeftOf="@id/humidity"/>
    <TextView
        android:id="@+id/text_cloudiness_condition"
        style="@style/textView_BigStyle"
        android:text="@string/text_cloudiness_condition"
        android:layout_marginTop="@dimen/vertical_small_margin"
        app:layout_constraintTop_toBottomOf="@id/Cloudiness"
        app:layout_constraintLeft_toLeftOf="@id/Cloudiness"/>
    <TextView
        android:id="@+id/Sunrise"
        style="@style/textView_normalStyle"
        android:text="@string/sunrise"
        app:layout_constraintTop_toBottomOf="@+id/text_humidity_condition"
        app:layout_constraintLeft_toLeftOf="@id/text_humidity_condition"
        android:layout_marginTop="@dimen/vertical_small_margin"/>
    <TextView
        android:id="@+id/Sunset"
        style="@style/textView_normalStyle"
        android:text="@string/sunset"
        app:layout_constraintTop_toBottomOf="@+id/text_cloudiness_condition"
        app:layout_constraintLeft_toLeftOf="@id/text_cloudiness_condition"
        android:layout_marginTop="@dimen/vertical_small_margin"/>
    <TextView
        android:id="@+id/text_sunrise_time"
        style="@style/textView_BigStyle"
        android:text="@string/text_sunrise_time"
        android:layout_marginTop="@dimen/vertical_small_margin"
        app:layout_constraintTop_toBottomOf="@id/Sunrise"
        app:layout_constraintLeft_toLeftOf="@id/Sunrise"/>
    <TextView
        android:id="@+id/text_sunset_time"
        android:text="@string/text_sunset_time"
        style="@style/textView_BigStyle"
        android:layout_marginTop="@dimen/vertical_small_margin"
        app:layout_constraintTop_toBottomOf="@id/Sunset"
        app:layout_constraintLeft_toLeftOf="@id/Sunset"/>
 <TextView
        android:id="@+id/AirQualityIndex"
        style="@style/textView_normalStyle"
        android:text="@string/air_quality_index"
        app:layout_constraintTop_toBottomOf="@+id/text_sunrise_time"
        app:layout_constraintLeft_toLeftOf="@id/text_sunrise_time"
        android:layout_marginTop="@dimen/vertical_small_margin"/>
    <TextView
        android:id="@+id/AirQuality"
        style="@style/textView_normalStyle"
        android:text="@string/air_quality"
        app:layout_constraintTop_toBottomOf="@+id/text_sunset_time"
        app:layout_constraintLeft_toLeftOf="@id/text_sunset_time"
        android:layout_marginTop="@dimen/vertical_small_margin"/>



</androidx.constraintlayout.widget.ConstraintLayout>